--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.53.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.3"
   },
@@ -14,7 +15,6 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2"
   }
 }
