--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "core-js": "^3.6.5",
     "sass": "^1.53.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
